embedded SDL_image

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 include(SDL2)
+include(SDL2_image)
 include(nuklear)
 include(ResourceCompiler)
 include(glew)
@@ -6,6 +7,7 @@ include(eigen)
 
 include_directories(
         ${SDL2_INCLUDE_DIR}
+        ${SDL2_IMAGE_INCLUDE_DIR}
         ${NUKLEAR_INCLUDE_DIR}
         ${GLEW_INCLUDE_DIR}
         ${EIGEN_INCLUDE_DIR}
@@ -13,6 +15,7 @@ include_directories(
 
 file(GLOB_RECURSE SOURCES *.cpp)
 compile_resources(SOURCES glsl *.glsl)
+compile_resources(SOURCES img *.png)
 
 add_executable(NLG ${SOURCES})
 
@@ -20,9 +23,11 @@ target_link_libraries(
         NLG
         ${SDL2_LIBRARY}
         ${GLEW_LIBRARY}
+        ${SDL2_IMAGE_LIBRARY}
 )
 
 sdl2_install_runtimes(NLG)
 glew_install_runtimes(NLG)
+sdl2_image_install_runtimes(NLG)
 
 install(TARGETS NLG RUNTIME DESTINATION ${OUTPUT_DIRECTORY})
